add scrollable GridView
based on LibOverview - https://github.com/mgood7123/libOverview/tree/master/src/main/java/smallville7123/liboverview

--- a/AAudioTrack_Application/src/main/res/layout/main_activity.xml
+++ b/AAudioTrack_Application/src/main/res/layout/main_activity.xml
@@ -70,8 +70,8 @@
         android:layout_height="match_parent"
         android:layout_weight="6"
         android:orientation="vertical"
-        app:rowWidth="40dp"
-        app:noteWidth="25dp"
+        app:channels="4"
+        app:fitChannelsToView="true"
         app:notes="16"
         app:fitNotesToView="true"
     />
