add separation between note resolution types

--- a/AAudioTrack_Application/src/main/res/layout/main_activity.xml
+++ b/AAudioTrack_Application/src/main/res/layout/main_activity.xml
@@ -72,7 +72,7 @@
         android:orientation="vertical"
         app:channels="4"
         app:fitChannelsToView="true"
-        app:notes="16"
+        app:nativeNotes="16"
         app:fitNotesToView="true"
     />
 
