--- a/AAudioTrack_Application/src/main/res/layout/main_activity.xml
+++ b/AAudioTrack_Application/src/main/res/layout/main_activity.xml
@@ -16,12 +16,52 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
-
-            <Space
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:orientation="horizontal">
+                <RadioGroup
+                    android:checkedButton="@+id/mode_pattern"
+                    android:id="@+id/mode"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/orange_out_line"
+                    android:orientation="vertical"
+                    >
 
+                    <RadioButton
+                        android:layout_marginRight="1dp"
+                        android:layout_marginTop="1dp"
+                        android:id="@+id/mode_pattern"
+                        android:background="@drawable/toggle_widget_background"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:button="@null"
+                        android:gravity="center"
+                        android:text="Pattern"
+                        android:textColor="@color/white" />
+
+                    <RadioButton
+                        android:layout_marginRight="1dp"
+                        android:layout_marginBottom="1dp"
+                        android:id="@+id/mode_song"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/toggle_widget_background"
+                        android:button="@null"
+                        android:gravity="center"
+                        android:text="Song"
+                        android:textColor="@color/white" />
+                </RadioGroup>
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="350dp"
                 android:layout_height="match_parent"
