more work on the PlaylistView
windows can now be named via android:text xml

windows now respect match_parent and wrap_content

VstView now respects window match_parent and wrap_content

GridView now has a ResizeUI callback

GridView can now accept additional data in addition to a view (Pair<View, Object>)

guard against null context menus

move colors to AAudioTrack2

--- a/AAudioTrack2/src/main/res/values/colors.xml
+++ b/AAudioTrack2/src/main/res/values/colors.xml
@@ -23,5 +23,10 @@
     <color name="shader_color">#9b9b9b</color>
     <color name="progress_color">#1DE9B6</color>
     <color name="background_color">#B0BEC5</color>
+    <color name="FL_GREY">#485156</color>
+    <color name="bright_orange">#FFFF5722</color>
+    <color name="orange">#FFC83F12</color>
+    <color name="dark_orange">#952E0C</color>
+    <color name="transparent">#00000000</color>
 
 </resources>
