add AutoSize and Preview views

--- a/AAudioTrack2/src/main/res/layout/fileview_content.xml
+++ b/AAudioTrack2/src/main/res/layout/fileview_content.xml
@@ -20,16 +20,16 @@
             android:paddingHorizontal="20dp"
             >
 
-            <smallville7123.UI.MatchHeightTextView
+            <smallville7123.UI.SLACASET
                 android:id="@+id/FileView_header_EditText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/cardview_light_background"
                 android:fontFamily="serif-monospace"
-                android:maxLines="1"
                 android:paddingHorizontal="20dp"
                 android:text="/rooterkll"
                 android:textColor="@color/FL_GREY"
+                app:autoResizeMode="heightWithEllipsis"
                 />
         </FrameLayout>
     </LinearLayout>
