--- a/AAudioTrack2/src/main/res/values/attrs.xml
+++ b/AAudioTrack2/src/main/res/values/attrs.xml
@@ -28,4 +28,24 @@
         <attr name="chevronColor" format="color" />
     </declare-styleable>
 
+    <attr name="autoResizeMode" format="integer" >
+        <!-- resizes text to both height and width. -->
+        <enum name="width" value="0"/>
+        <!-- resizes text to height only. -->
+        <enum name="height" value="1" />
+        <!-- resizes text to height only, adding an ellipsis "..." if the text is too long. -->
+        <enum name="heightWithEllipsis" value="2" />
+    </attr>
+
+    <declare-styleable name="SingleLineAutoSizeTextView">
+        <attr name="autoResizeMode" />
+    </declare-styleable>
+
+    <declare-styleable name="SingleLineAutoSizeEditText">
+        <attr name="autoResizeMode" />
+    </declare-styleable>
+
+    <declare-styleable name="example">
+        <attr name="autoResizeMode" />
+    </declare-styleable>
 </resources>
