--- a/AAudioTrack2/src/main/res/layout/fileview_content.xml
+++ b/AAudioTrack2/src/main/res/layout/fileview_content.xml
@@ -1,51 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout4"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/FL_GREY"
-    >
+    android:background="@color/FL_GREY">
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
+    <Space
+        android:id="@+id/expandableViewSpace"
+        android:layout_width="80dp"
         android:layout_height="80dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/expandableViewSpace"
+        app:layout_constraintBottom_toBottomOf="@id/expandableViewSpace"
         >
 
-        <smallville7123.UI.ExpandableView
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
-            app:headerLayout="@layout/fileview_filter_icon"
-            app:contentLayout="@layout/fileview_filter_content"
-            >
-        </smallville7123.UI.ExpandableView>
-        <FrameLayout
+        <smallville7123.UI.SLACASET
+            android:id="@+id/FileView_header_EditText"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingVertical="10dp"
-            android:paddingHorizontal="20dp"
-            >
-
-            <smallville7123.UI.SLACASET
-                android:id="@+id/FileView_header_EditText"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/cardview_light_background"
-                android:fontFamily="serif-monospace"
-                android:paddingHorizontal="20dp"
-                android:text="/rooterkll"
-                android:textColor="@color/FL_GREY"
-                app:autoResizeMode="heightWithEllipsis"
-                />
-        </FrameLayout>
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_background"
+            android:fontFamily="serif-monospace"
+            android:paddingHorizontal="4dp"
+            android:text="/rooterkll"
+            android:textColor="@color/FL_GREY"
+            android:textSize="30sp"
+            app:autoResizeMode="ellipsis"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <FrameLayout
         android:id="@+id/FileView_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/constraint"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <smallville7123.UI.ExpandableView
+        android:id="@+id/expandableView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-    />
+        app:headerLayout="@layout/fileview_filter_icon"
+        app:contentLayout="@layout/fileview_filter_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:expanded="false"
+        app:replaceHeaderWhenExpanded="false"
+        app:header_layout_height="80dp"
+        app:header_layout_width="80dp"
+        app:content_layout_height="160dp"
+        app:content_layout_width="300dp"
+        />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
