--- a/AAudioTrack2/src/main/res/layout/fileview_content.xml
+++ b/AAudioTrack2/src/main/res/layout/fileview_content.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout4"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -55,18 +54,21 @@
 
     <smallville7123.UI.ExpandableView
         android:id="@+id/expandableView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:headerLayout="@layout/fileview_filter_icon"
-        app:contentLayout="@layout/fileview_filter_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:expanded="false"
-        app:replaceHeaderWhenExpanded="false"
-        app:header_layout_height="80dp"
-        app:header_layout_width="80dp"
-        app:content_layout_height="160dp"
-        app:content_layout_width="300dp"
-        />
-
+        android:orientation="vertical"
+        >
+        <include
+            layout="@layout/fileview_filter_icon"
+            android:layout_height="80dp"
+            android:layout_width="80dp"
+            />
+        <include
+            layout="@layout/fileview_filter_content"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            />
+    </smallville7123.UI.ExpandableView>
 </androidx.constraintlayout.widget.ConstraintLayout>
