--- a/AAudioTrack2/src/main/res/layout/fileview_filter_content_permissions_group.xml
+++ b/AAudioTrack2/src/main/res/layout/fileview_filter_content_permissions_group.xml
@@ -1,39 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <CheckBox
         android:id="@+id/checkBoxRead"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="Read"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/checkBoxWrite"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Read" />
 
     <CheckBox
         android:id="@+id/checkBoxWrite"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="Write"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/checkBoxExecute"
-        app:layout_constraintLeft_toRightOf="@id/checkBoxRead"
-        />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Write" />
 
     <CheckBox
         android:id="@+id/checkBoxExecute"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="Execute"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/checkBoxWrite"
-        />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Execute" />
+</LinearLayout>
