--- a/fileview/src/main/res/layout/activity_main.xml
+++ b/fileview/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <smallville7123.UI.FileView
+    <smallville7123.AndroidDAW.SDK.UI.FileView
         android:id="@+id/fileView"
         android:textSize="80sp"
         android:layout_width="0dp"
